--- a/publish.css
+++ b/publish.css
@@ -128,22 +128,22 @@ h6 {
 
 h1 {
     color: var(--h1-color);
-    font-size: 26px !important;
+    font-size: 22px !important;
 }
 
 h2 {
     color: var(--h2-color);
-    font-size: 24px !important;
+    font-size: 21px !important;
 }
 
 h3 {
     color: var(--h3-color);
-    font-size: 22px !important;
+    font-size: 20px !important;
 }
 
 h4 {
     color: var(--h4-color);
-    font-size: 20px !important;
+    font-size: 19px !important;
 }
 
 h5 {
@@ -153,7 +153,7 @@ h5 {
 
 h6 {
     color: var(--h6-color) !important;
-    font-size: 0px !important;
+    font-size: 17px !important;
 }
 
 p,
@@ -184,29 +184,22 @@ a {
 a.external-link {
     color: #7C8DFF;
     background-image: none;
-    padding-left: 2px;
-    padding-right: 2px;
+    padding-right: 0px;
     transition: 0.3s;
 }
 
 a.external-link:hover {
-    color: white;
-    background-color: #1e2c8a;
-    border-radius: 3px;
+    color: rgb(0, 85, 255);
     transition: 0.3s;
 }
 
 a.internal-link {
     color: #FF8D8D;
-    padding-left: 2px;
-    padding-right: 2px;
     transition: 0.3s;
 }
 
 a.internal-link:hover {
-    color: white;
-    background-color: #6c2020;
-    border-radius: 3px;
+    color: rgb(232, 42, 42);
     transition: 0.3s;
 }
 
@@ -350,18 +343,6 @@ a.internal-link:hover {
     opacity: 1;
     transition: 0.3s;
 }
-
-/* h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin-left: -12px !important;
-    margin-right: -12px !important;
-    padding-left: 12px;
-    padding-right: 12px;
-} */
 
 
 .is-flashing {
