--- a/publish.css
+++ b/publish.css
@@ -88,17 +88,19 @@
     z-index: 1;
     line-height: 32px;
     color: white !important;
+    max-width: 101% !important;
+    left: -0.5%;
 }
 
 /* Customize header image */
 .header-image {
     position: relative;
-    top: -75px;
+    top: -65px;
     left: -2%;
     max-width: 104% !important;
-    margin-bottom: -75px;
+    margin-bottom: -65px;
     filter: brightness(64%);
-    border-radius: 30px !important;
+    border-radius: 10px !important;
 }
 
 /* Link customization */
